--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -18,7 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.0.5",
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-navigation/bottom-tabs": "^7.0.1",
+    "@react-navigation/bottom-tabs": "^7.0.4",
     "@react-navigation/elements": "^2.0.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
@@ -41,7 +41,7 @@
     "react-native-pie-chart": "^3.0.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "^3.31.1",
+    "react-native-screens": "^4.1.0",
     "react-native-svg": "^15.9.0",
     "react-native-web": "~0.19.10",
     "react-secure-storage": "^1.3.2"
