--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.0.5",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-firebase/app": "^19.0.0",
+    "@react-native-firebase/auth": "^19.0.0",
     "@react-navigation/bottom-tabs": "^7.0.4",
     "@react-navigation/elements": "^2.0.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
     "@types/react-native": "^0.70.19",
     "expo": "^51.0.39",
+    "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.10",
     "expo-linking": "^6.3.1",
