--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -54,9 +54,9 @@ dependencyResolutionManagement {
   }
 }
 
-// apply from: new File(["node", "--print", "require.resolve('expo/package.json')"].execute(null, rootDir).text.trim(), "../scripts/autolinking.gradle");
-// useExpoModules()
-apply from: file("../node_modules/react-native/settings.gradle")
+apply from: new File(["node", "--print", "require.resolve('expo/package.json')"].execute(null, rootDir).text.trim(), "../scripts/autolinking.gradle");
+useExpoModules()
+
 
 
 if (getRNMinorVersion() < 75) {
