--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -116,7 +116,6 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0.0"
-        multiDexEnabled true
     }
     signingConfigs {
         debug {
@@ -170,13 +169,11 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
-    implementation 'androidx.multidex:multidex:2.0.1'
-implementation platform('com.google.firebase:firebase-bom:28.4.1') 
-implementation 'com.google.firebase:firebase-auth'
+implementation platform('com.google.firebase:firebase-bom:33.6.0')
     def isGifEnabled = (findProperty('expo.gif.enabled') ?: "") == "true";
     def isWebpEnabled = (findProperty('expo.webp.enabled') ?: "") == "true";
     def isWebpAnimatedEnabled = (findProperty('expo.webp.animated') ?: "") == "true";
-
+implementation 'com.google.firebase:firebase-analytics'
     if (isGifEnabled) {
         // For animated gif support
         implementation("com.facebook.fresco:animated-gif:${reactAndroidLibs.versions.fresco.get()}")
