--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,11 +3,11 @@
 buildscript {
     ext {
         buildToolsVersion = findProperty('android.buildToolsVersion') ?: '34.0.0'
-        minSdkVersion = Integer.parseInt(findProperty('android.minSdkVersion') ?: '21')
+        minSdkVersion = Integer.parseInt(findProperty('android.minSdkVersion') ?: '23')
         compileSdkVersion = Integer.parseInt(findProperty('android.compileSdkVersion') ?: '34')
         targetSdkVersion = Integer.parseInt(findProperty('android.targetSdkVersion') ?: '34')
         kotlinVersion = findProperty('android.kotlinVersion') ?: '1.9.23'
-googlePlayServicesAuthVersion = "19.0.0"
+
         ndkVersion = "26.1.10909125"
     }
     repositories {
@@ -15,12 +15,18 @@ googlePlayServicesAuthVersion = "19.0.0"
         mavenCentral()
     }
     dependencies {
-        classpath ("com.google.gms:google-services:4.4.2")
+        classpath 'com.google.gms:google-services:4.4.1'
         classpath('com.android.tools.build:gradle')
         classpath('com.facebook.react:react-native-gradle-plugin')
         classpath('org.jetbrains.kotlin:kotlin-gradle-plugin')
-        classpath("com.google.gms:google-services:4.3.10")
     }
+}
+plugins {
+  // ...
+
+  // Add the dependency for the Google services Gradle plugin
+  id 'com.google.gms.google-services' version '4.4.2' apply false
+
 }
 
 apply plugin: "com.facebook.react.rootproject"
