--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-firebase/app": "^19.0.0",
     "@react-native-firebase/auth": "^19.0.0",
+    "@react-native-firebase/firestore": "^19.0.0",
     "@react-navigation/bottom-tabs": "^7.0.4",
     "@react-navigation/elements": "^2.0.0",
     "@react-navigation/native": "^7.0.0",
