--- a/app.json
+++ b/app.json
@@ -20,9 +20,10 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "googleServicesFile" : "./google-services.json",
       
-      "package":"com.anonymous.ExpenseManager"
+      "googleServicesFile" : "./google-services.json",
+      "package":"com.galaxies.ExpenseManager"
+      
     },
     "web": {
       "bundler": "metro",
@@ -34,7 +35,8 @@
       "expo-font",
       [
         "expo-build-properties",
-        {
+        { 
+          
           "ios": {
             "useFrameworks": "static"
           }
