--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.0.5",
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-firebase/app": "^19.0.0",
+    "@react-native-firebase/app": "^19.3.0",
     "@react-native-firebase/auth": "^19.3.0",
-    "@react-native-firebase/database": "^19.0.0",
+    "@react-native-firebase/database": "^19.3.0",
     "@react-native-firebase/firestore": "^19.3.0",
     "@react-navigation/bottom-tabs": "^7.0.4",
     "@react-navigation/elements": "^2.0.0",
@@ -43,6 +43,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "^2.16.1",
+    "react-native-paper": "^5.12.5",
     "react-native-pie-chart": "^3.0.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
