--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,10 +15,9 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.google.gms:google-services:4.4.1'
         classpath('com.android.tools.build:gradle')
         classpath('com.facebook.react:react-native-gradle-plugin')
-        classpath('org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version')
+        classpath('org.jetbrains.kotlin:kotlin-gradle-plugin')
     }
 }
 
