--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "expo": "^51.0.39",
     "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.29",
     "expo-font": "~12.0.10",
     "expo-linking": "^6.3.1",
+    "expo-modules-autolinking": "^2.0.2",
     "expo-router": "^3.5.24",
     "expo-splash-screen": "~0.27.7",
     "expo-status-bar": "~1.12.1",
@@ -50,7 +52,8 @@
     "react-native-screens": "^4.1.0",
     "react-native-svg": "^15.9.0",
     "react-native-web": "~0.19.10",
-    "react-secure-storage": "^1.3.2"
+    "react-secure-storage": "^1.3.2",
+    "uri-scheme": "^1.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
