--- a/app.json
+++ b/app.json
@@ -44,6 +44,8 @@
       ],
       "@react-native-firebase/app",
       "@react-native-firebase/auth",
+      "@react-native-firebase/database",
+      "@react-native-firebase/firestore",
 
       [
         "@react-native-firebase/app",
